/*
 * $Id: ChangeLog,v 1.138 2006-03-28 02:12:50 guerra000 Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-03-27 20:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_windows.prg
    ! Fixed context menu (recent) bug.

2006-03-26 22:22 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_menu.prg
  * source/h_windows.prg
    * Added ::oMenu property to TForm class.
  * include/i_window.ch
  * include/oohg.h
  * source/c_windows.c
  * source/c_controlmisc.c
  * source/h_windows.prg
    * MDI windows pre-implemented.
  * source/h_controlmisc.prg
  * source/h_windows.prg
    * Converted TForm:RefreshDataControls() to ::RefreshData()
    * Added INTERNAL forms at Parent:BrowseList and Parent:aControls.
    * Moved ::Events_Size() and ::IsHandle() methods to TWINDOW level.

2006-03-26 21:13 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/h_edit.prg
    * Small optmization and workaround for Harbour preprocessor's bug.

2006-03-26 15:29 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * include/i_var.ch
  * source/h_edit.prg
  * source/h_edit_ex.prg
  * source/h_init.prg
    * _OOHG_cMacroTemp removed.
  * source/makelib.bat
    * If an error occurs during library creaiton, it stops.

2006-03-26 07:14 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * samples/oohg/hello.prg
  * samples/oohg/prnttest.prg
    *  little change in sample in order to last tprint changes

2006-03-25 20:46 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg
    * optimizing  Tprint , Tminiprint, Thbprinter and Tdosprint classes.

2006-03-22 11:49 UTC-0500 Ciro Vargas C. <pcman2010@yahoo.com>
  * source/h_print.prg
  * source/h_report.prg
    * now Tprint class have subclasses Tminiprint, Thbprinter and Tdosprint for modularity.
