@@ -1,11 +1,19 @@
 /*
- * $Id: ChangeLog,v 1.138 2006-03-28 02:12:50 guerra000 Exp $
+ * $Id: ChangeLog,v 1.139 2006-03-28 04:04:24 guerra000 Exp $
  */
 /* Use this format for the entry headers:
    YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-03-27 22:03 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
+  * source/c_windows.c
+    * Simplified DefFrameProc()'s call code.
+  * source/h_windows.prg
+    * INTERNAL windows are ::Active and "showed" since it's ceation.
+  * source/h_print.prg
+    * Fixed some warnings.
 
 2006-03-27 20:10 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
   * source/h_windows.prg
